internal/config/testdata/invalid-config/BadSecretsBackendType.hjson
{
  APIAppCredentials:
  {
    ClientID: client-id
    ClientSecret: client-secret
  }
  Account: youremail@domain.com
  SecretsBackendType: "invalid"
  Jobs:
  [
    {
      SourceFolder: ./testdata
      DeleteAfterUpload: false
      IncludePatterns: []
      ExcludePatterns: []
    }
  ]
}
